Add links for view objects

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -256,6 +256,7 @@ dockets=Laufzettel
 docketPrint=Laufzettel drucken
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Laufzettel wird gespeichert...
+docketView=Laufzettel anzeigen
 docstructAnAndereStelleSchieben=Strukturelement an andere Stelle schieben
 docstructNachObenSchieben=Strukturelement nach oben schieben
 docstructNachUntenSchieben=Strukturelement nach unten schieben
@@ -599,6 +600,7 @@ processesSaving=Vorg\u00E4nge werden gespeichert...
 processTitle=Vorgangstitel
 processes=Vorg\u00E4nge
 processesInThisBatch=Vorg\u00E4nge in diesem Batch
+processView=Vorgang anzeigen
 processingBegin=Bearbeitungsbeginn
 processingEnd=Bearbeitungsende
 processingStatusDown=Bearbeitungsstatus runtersetzen
@@ -615,6 +617,7 @@ projectProgress=Projektentwicklung
 projects=Projekte
 # projectSaving is used in projectEdit.xhtml - line 32
 projectSaving=Projekt wird gespeichert...
+projectView=Projekt anzeigen
 properties=Eigenschaften
 propertiesExtended=Erweiterte Eigenschaften
 propertiesSaved=Eigenschaften wurden gespeichert.
@@ -654,6 +657,7 @@ ruleset=Regelsatz
 rulesetEdit=Regelsatz bearbeiten
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Regelsatz wird gespeichert...
+rulesetView=Regelsatz anzeigen
 rulesets=Regels\u00E4tze
 saveConfiguration=Konfigurationsdatei speichern
 saveTifHeaderFile=Datei mit Tiff-Header speichern
@@ -746,6 +750,7 @@ templateProperty=Vorlageneigenschaft
 templateProperties=Vorlageneigenschaften
 templateTitle=Produktionsvorlagentitel
 templates=Produktionsvorlagen
+templateView=Produktionsvorlage anzeigen
 termsOfUse=Nutzungsbedingungen
 # used in "LegalTexts.java"
 termsOfUseDefaultText=Die Nutzungsbedingungen f\u00FCr dieses System wurden noch nicht hinterlegt.
@@ -819,6 +824,7 @@ reallyExecute=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
 workflow=Workflow
 workflowSaving=Workflow wird gespeichert...
 workflows=Workflows
+workflowView=Workflow anzeigen
 working=L\u00E4uft
 workpieceProperties=Werkst\u00FCckeigenschaften
 year=Jahr
