--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -599,6 +599,7 @@ processesSaving=Saving processes...
 processTitle=Process title
 processes=Processes
 processesInThisBatch=processes of this batch
+processView=View process
 processingBegin=Start of work
 processingEnd=End of work
 processingStatusDown=Set status of process down
@@ -614,6 +615,7 @@ projectList=Projects list
 projectProgress=Project progress
 projects=Projects
 projectSaving=Saving project...
+projectView=View project
 properties=Properties
 propertiesExtended=Extended properties
 propertiesSaved=Property saved.
@@ -649,11 +651,12 @@ roleEdit=Edit role
 roleView=View role
 roles=Roles
 rolesAdd=Add roles
-ruleset=Rule set
-rulesetEdit=Edit rule set
+ruleset=Ruleset
+rulesetEdit=Edit ruleset
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Saving ruleset...
-rulesets=Rule sets
+rulesets=Rulesets
+rulesetView=View ruleset
 saveConfiguration=Save configuration file
 saveTifHeaderFile=Save file with tiff header
 script=Script
@@ -745,6 +748,7 @@ templateProperty=template property
 templateProperties=Template properties
 templates=Process templates
 templateTitle=Template title
+templateView=View template
 termsOfUse=Terms of use
 # used in "LegalTexts.java"
 termsOfUseDefaultText=Terms of use have not been configured for this system.
@@ -818,6 +822,7 @@ reallyExecute=Are you sure you want to execute?
 workflow=Workflow
 workflowSaving=Saving workflow...
 workflows=Workflows
+workflowView=View workflow
 working=Working
 workpieceProperties=Workpiece properties
 year=year
