Add user interface language to user edit page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -428,7 +428,6 @@ insertIntoPagination=In Paginierungssequenz einf\u00FCgen
 insertNewImages=Neue Bilder einf\u00FCgen
 internFileFormat=Internes Speicherformat
 isInUse=befindet sich in Bearbeitung durch
-isActive=Benutzerkonto aktiv
 languages=Sprachen
 languageUserInterface=Sprache f\u00FCr Nutzeroberfl\u00E4che
 lastActionBefore=Letzte Aktion vor\:
@@ -787,8 +786,11 @@ url=URL
 user=Benutzer
 username=Benutzername
 users=Benutzer
-userEdit=Benutzer bearbeiten
+userAccountActive=Benutzerkonto aktiv
 userAdd=Benutzer hinzuf\u00FCgen
+userData=Benutzerdaten \u0026 Einstellungen
+userDN=User DN
+userEdit=Benutzer bearbeiten
 userConfiguration=Benutzerkonfiguration
 userCreate=Neuen Benutzer anlegen
 userInstruction=Bedienungshinweise
@@ -796,8 +798,6 @@ userInstructionText=Lorem deutsch ipsum dolor sit amet, consectetur adipisicing 
 userList=Benutzerliste
 userManagement=Benutzerverwaltung
 userView=Benutzer anzeigen
-userData=Benutzerdaten \u0026 Einstellungen
-userDN=User DN
 # roleSaving is used in roleEdit.xhtml - line 40
 roleSaving=Rolle wird gespeichert
 userNotFound=Benutzer kann nicht ermittelt werden
