Make title configurable from translation file

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -50,6 +50,7 @@ allTasks=All tasks
 alreadyLoggedIn=You are already logged in. How do you want to proceed?
 alsErstesKindDesAktuellenElements=As first child of current element
 alsLetztesKindDesAktuellenElements=As last child of current element
+applicationTitle=Kitodo.Production
 apply=Apply
 applyToAllProcesses=Apply to all processes of the batch
 applyToThisProcess=Apply to this process
