--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -50,6 +50,7 @@ allTasks=Alle Aufgaben
 alreadyLoggedIn=Sie sind bereits eingeloggt. Wie m\u00F6chten Sie vorgehen?
 alsErstesKindDesAktuellenElements=Als erstes Subelement des aktuellen Elementes
 alsLetztesKindDesAktuellenElements=Als letztes Subelement des aktuellen Elementes
+applicationTitle=Kitodo.Production
 apply=\u00DCbernehmen
 applyToAllProcesses=\u00DCbernehmen f\u00FCr alle Vorg\u00E4nge dieses Batches
 applyToThisProcess=\u00DCbernehmen f\u00FCr diesen Vorgang
