Use more detailed message for validation of process title

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -125,7 +125,7 @@ processCreationErrorFieldIsEmpty=enth\u00E4lt keinen Wert.
 processCreationErrorNoCollection=keine Kollektion angegeben.
 processTitleAlreadyInUse=Der Prozesstitel wird bereits verwendet.
 processTitleEmpty=kein Vorgangstitel angegeben.
-processTitleInvalid=Ung\u00FCltiger Titel f\u00FCr einen Vorgang.
+processTitleInvalid=Ung\u00FCltiger Titel f\u00FCr einen Vorgang. Er solltet mit dem regulären Ausdruck ''{0}'' übereinstimmen.
 propertiesForProcessNotSaved=Eigenschaften des Prozesses {0} konnten nicht gespeichert werden.
 
 # R
