--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -125,7 +125,7 @@ processCreationErrorFieldIsEmpty=contains no value.
 processCreationErrorNoCollection=no collection stated.
 processTitleAlreadyInUse=The process title already in use.
 processTitleEmpty=no process title stated.
-processTitleInvalid=Invalid title for process
+processTitleInvalid=Invalid title for process. It should match ''{0}'' regular expression.
 propertiesForProcessNotSaved=Properties for process {0} could not be saved.
 
 # R
