Use more specific messages for diagram errors

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -37,7 +37,8 @@ docketTitleDuplicated=Der Laufzettel mit den gleichen Titel existiert schon.
 errorDataIncomplete=Unvollst\u00E4ndige Daten\:
 errorDatabaseReading=Fehler beim Datenbanklesen von ''{0}'' with ID {1}.
 errorDeleting=Fehler beim L\u00F6schen von ''{0}''
-errorDiagram=Fehler für das Diagramm, das dem Workflow mit der ID {0} zugewiesen wurde.
+errorDiagramConvert=Fehler für das Diagramm, das dem Workflow mit der Titel ''{0}'' zugewiesen wurde. In dem angegebenen Diagramm erstellte Aufgaben können nicht in die Produktionsvorlagenaufgaben konvertiert werden.
+errorDiagramFile=Fehler für das Diagramm, das dem Workflow mit der Titel ''{0}'' zugewiesen wurde. Es fehlt eine Datei für das angegebene Diagramm.
 errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorDownloading=Fehler beim Herunterladen von ''{0}''
 errorDuplicate=Fehler: ''{0}'' konnte nicht dupliziert werden!
