--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -37,7 +37,8 @@ docketTitleDuplicated=The docket with the same title exists already.
 errorDataIncomplete=Incomplete data\:
 errorDatabaseReading=Error on reading database for ''{0}'' with ID {1}.
 errorDeleting=Error deleting ''{0}''
-errorDiagram=Error for diagram assigned to workflow with ID {0}.
+errorDiagramConvert=Error for diagram assigned to workflow with title ''{0}''. Tasks created in the given diagram can not be converted to the template tasks.
+errorDiagramFile=Error for diagram assigned to workflow with title ''{0}''. There is missing file for the given diagram.
 errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorDownloading=Error downloading ''{0}''
 errorDuplicate=Error: Unable to duplicate ''{0}''!
