Add frontend for add / delete template

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -744,6 +744,8 @@ tasks=Aufgaben
 tasksCurrent=Meine Aufgaben
 technicalData=Technische Daten
 template=Produktionsvorlage
+templateAdd=Produktionsvorlage hinzuf\u00FCgen
+templateDelete=Produktionsvorlage l\u00F6schen
 templateDetails=Produktionsvorlagendetails
 templateNotAvailableForProcess=Diese Vorgangsvorlage enth\u00E4lt Schritte mit unvollst\u00E4ndigen Angaben oder ist nicht aktiv.
 templateProperty=Vorlageneigenschaft
