--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -742,6 +742,8 @@ tasks=Tasks
 tasksCurrent=My tasks
 technicalData=Technical data
 template=Process template
+templateAdd=Add process template
+templateDelete=Delete process template
 templateDetails=Template details
 templateNotAvailableForProcess=This process template contains tasks with incomplete details or is inactive.
 templateProperty=template property
