--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -122,6 +122,7 @@ errorParsingFile=Error parsing: various {0} in the file ('{1}' & '{2}').
 errorParsingName="Error parsing: First name not separated by comma from last name ('" {0} "')".
 errorProjectNoTitleGiven=No project title was given. You cannot save a project without a title.
 passwordsDontMatch=The passwords you entered do not match!
+passwordsDontMatchOld=The password you entered does not match your old password!
 processAssignedError=The template could not be deleted because there are already assigned processes.
 processCreationErrorFieldIsEmpty=contains no value.
 processCreationErrorNoCollection=no collection stated.
