--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -554,6 +554,7 @@ nurDieMarkiertenSeiten=Nur die markierten Seiten
 objectType=Objekttyp
 ocr=OCR
 oderSperrungAufheben=Oder heben Sie die Sperrung hier auf.
+oldPassword=Altes Passwort
 openSteps=Offene Schritte
 orLast=oder letzte
 order=Reihenfolge
@@ -574,6 +575,7 @@ part=Teil
 password=Passwort
 passwordChange=Passwort \u00E4ndern
 passwordChanged=Das Passwort wurde erfolgreich ge\u00E4ndert.
+passwordReset=Passwort zur\u00FCcksetzen
 personBearbeiten=Person bearbeiten
 person=Person
 persons=Personen
