--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -553,6 +553,7 @@ nurDieMarkiertenSeiten=Only the selected pages
 ocr=OCR
 objectType=Object type
 oderSperrungAufheben=Or unlock here.
+oldPassword=Old password
 openSteps=Open steps
 orLast=or last
 order=Order
@@ -573,6 +574,7 @@ part=part
 password=Password
 passwordChange=Change password
 passwordChanged=The password has been changed.
+passwordReset=Reset password
 person=Person
 personBearbeiten=Edit person
 persons=Persons
