--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -156,3 +156,11 @@ tooManyBatchesSelected=Multiple batches are selected. To use this function, plea
 errorUploading=Error uploading ''{0}''
 uploadFailed=Upload failed.
 userAssignedError=The project could not be deleted because there are still assigned users.
+
+# W
+workflowExceptionConditionalBranch=Task in conditional branch can not have second task. Please remove task after task with name: '{0}'.
+workflowExceptionParallelBranch=Task in parallel branch can not have second task. Please remove task after task with name: '{0}'.
+workflowExceptionExclusiveGateway=Exclusive gateway is not followed by any tasks!
+workflowExceptionMissingGateway=Task with name ''{0}'' has more than one following tasks without any gateway in between!
+workflowExceptionMissingRole=No roles assigned to the workflow task with name ''{0}''.
+workflowExceptionParallelGateway=Parallel gateway is not followed by any tasks!
