--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -79,7 +79,7 @@ errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
 ldapGroupInUse=Die LDAP Gruppe ist noch mit Benutzern verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 loginInUse=Login ist bereits vergeben
-loginNotValid=Login '{0}' enth\u00E4lt ung\u00FCltige Zeichen oder ist auf Blackliste.
+loginNotValid=Login ''{0}'' enth\u00E4lt ung\u00FCltige Zeichen oder ist auf Blackliste.
 
 # M
 errorMassDownloadProjectCreation=Der Projektordner {0} kann nicht erstellt werden.
@@ -118,7 +118,7 @@ noUserInStep=Der Aufgabe {0} wurden keine Nutzer zugeordnet.
 errorOccurred=Es ist ein Fehler aufgetreten
 
 # P
-errorParsingFile=Parsingfehler: verschiedene {0} in der Datei ('{1}' & '{2}').
+errorParsingFile=Parsingfehler: verschiedene {0} in der Datei (''{1}'' & ''{2}'').
 errorParsingName="Parsingfehler: Vorname nicht mit Komma vom Nachnamen getrennt ('" {0} "')".
 errorProjectNoTitleGiven=Kein Titel angegeben. Ein Projekt kann nicht ohne Titel gespeichert werden.
 passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht \u00FCberein!
