Remove not used messages

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -45,8 +45,6 @@ errorDownloading=Fehler beim Herunterladen von ''{0}''
 errorDuplicate=Fehler: ''{0}'' konnte nicht dupliziert werden!
 
 # E
-errorEmailBody=Es ist ein Fehler in Kitodo aufgetreten. Erg\u00E4nzen Sie bitte hier die Meldung durch eine kurze Beschreibung, was Sie gerade in Kitodo getan haben, als dieser Fehler auftrat\:
-errorEmailMessage=Um die Kitodo-Entwicklung zu unterst\u00FCtzen, k\u00F6nnen Sie eine <a href\="{0}"> E-Mail an die Entwickler </a> schicken. Bitte beschreiben Sie kurz, nach welchen Aktionen der Fehler auftrat, und wie er reproduziert werden kann. Vielen Dank\!
 errorExport=Export abgebrochen, xml-LeseFehler bei Vorlage\: ''{0}''
 errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
 
@@ -73,8 +71,6 @@ invalidIdentifierSame=Der Wert des Identifiers {0} enth\u00E4lt die gleichen Wer
 # K
 
 # L
-errorLazyInitialization=Ein Fehler mit der Datenbankverbindung trat auf. Eventuell wurde dieser Fehler durch Verwenden des Zur\u00FCck Buttons verursacht. Sie m\u00FCssen Kitodo vermutlich neu \u00FCber den Link/URL starten
-errorLinkText=Hier geht es zur\u00FCck auf die <a href\="{0}">Kitodo-Startseite</a>, evtl. m\u00FCssen Sie sich dort neu einloggen.
 errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
 ldapGroupInUse=Die LDAP Gruppe ist noch mit Benutzern verkn\u00FCpft und kann nicht gel\u00F6scht werden.
@@ -106,7 +102,6 @@ metadataTimeout=Die Metadaten wurden von Ihnen 30 min nicht bearbeitet und wurde
 multipleBatchesAssigned=Dieser Vorgang ist mehreren Batches zugeordnet. Um diese Funktion zu nutzen, darf der Vorgang nur genau einem Batch zugeordnet sein.
 
 # N
-errorNoMailService=Die M\u00F6glichkeit von hier aus das Entwicklungsteams durch email zu benachrichtigen ist ausgeschaltet
 noBatchSelected=Es ist kein Batch ausgew\u00E4hlt.
 noFileSelected=Keine Datei ausgew\u00E4hlt.
 noProcessSelected=Es wurde kein Vorgang ausgew\u00E4hlt.
@@ -143,7 +138,6 @@ rulesetTitleDuplicated=Der Regelsatz mit den gleichen Titel existiert schon.
 # S
 errorSaving=Fehler beim Speichern von ''{0}''
 errorSAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
-errorSubjectLine=Kitodo Anwendungsfehler
 stepInWorkError=Der Schritt ist nicht mehr f\u00FCr die Bearbeitung offen, wahrscheinlich hat in der Zwischenzeit jemand diesen Schritt angenommen
 stepSaveError=Es ist ein Fehler beim Speichern des Schrittes aufgetreten.
 
@@ -153,6 +147,5 @@ templateAssignedError=Der Workflow kann nicht gel\u00F6scht werden, da diesem Pr
 tooManyBatchesSelected=Es sind mehrere Batches ausgew\u00E4hlt. W\u00E4hlen Sie genau einen Batch aus, um diese Funktion zu nutzen.
 
 # U
-errorUploading=Fehler beim Hochladen von ''{0}''
-uploadFailed=Das Hochladen ist fehlgeschlagen.
+errorUploading=Fehler beim Hochladen von ''{0}''.
 userAssignedError=Das Projekt kann nicht gel\u00F6scht werden, da diesem noch Benutzer zugewiesen sind.
