--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -45,8 +45,6 @@ errorDownloading=Error downloading ''{0}''
 errorDuplicate=Error: Unable to duplicate ''{0}''!
 
 # E
-errorEmailBody=An error has occurred in Kitodo. Please add to this message a short description of what you were doing in Kitodo when the error occurred.
-errorEmailMessage=If this error occurred for the first time you could <a href\="{0}"> send an email to the developers </a> to support the development of Kitodo. Please mind further requests for information within the email.
 errorExport=Export canceled for process\: ''{0}''
 errorExporting=Error exporting ''{0}'' with ID {1}
 
@@ -73,8 +71,6 @@ invalidIdentifierSame=The value of the identifier {0} contains the same values i
 # K
 
 # L
-errorLazyInitialization=An error has occurred with the database connection. This error may have been caused by using the return button of your browser. You probably have to return to Kitodo via the link/url.
-errorLinkText=You may ignore the stack trace and continue your work with a click <a href\="{0}">here</a>.<br/>If this doesn't work you may have to use the navigation or even restart the application by logging out and back in. zzz
 errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
 ldapGroupInUse=The LDAP group is still associated with users and could not be deleted.
@@ -106,7 +102,6 @@ metadataTimeout=The metadata has not edited by you for 30 minutes and were there
 multipleBatchesAssigned=This process is assigned to multiple batches. To use this feature, it must be assigned to only one batch.
 
 # N
-errorNoMailService=The feature to notify the development team by email from here is disabled.
 noBatchSelected=There is no batch selected.
 noFileSelected=No file selected.
 noProcessSelected=No process selected.
@@ -143,7 +138,6 @@ rulesetTitleDuplicated=The ruleset with the same title exists already.
 # S
 errorSaving=Error saving ''{0}''
 errorSAXException=Basic error while parsing the XML data. You may want to check the file for being well-formed.
-errorSubjectLine=Kitodo application error
 stepInWorkError=Someone is already editing this step.
 stepSaveError=Step save did not work. Error has been logged.
 
@@ -153,6 +147,5 @@ templateAssignedError=The workflow could not be deleted because there are alread
 tooManyBatchesSelected=Multiple batches are selected. To use this function, please select one batch only.
 
 # U
-errorUploading=Error uploading ''{0}''
-uploadFailed=Upload failed.
+errorUploading=Error uploading ''{0}''.
 userAssignedError=The project could not be deleted because there are still assigned users.
