Improve validation messages
Feedback messages from the validator have been harmonized and improved
in readability.

--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -63,8 +63,8 @@ granularity.download.error=An error arose while preparing the data for download
 errorImporting=Error importing ''{0}'' with ID {1}
 importFailedError=The import of {0} failed. The error message is\: {1}
 imagePaginationError={1} images found but {0} images expected. Please check the pagination.
-invalidIdentifierCharacter=The value of the identifier {0} of the structural element {1} contains invalid characters.
-invalidIdentifierSame=The value of the identifier {0} contains the same values in {1} and {2}.
+invalidIdentifierCharacter=The value of the identifier {0} contains invalid characters.
+invalidIdentifierSame=The identifier {0} has the same value in {1} and {2}.
 
 # J
 
@@ -86,18 +86,18 @@ metadataDigitalDocumentError=DigitalDocument error at\: {0}
 metadataEditorThreadLock=Another file gets processed in the background. Please try again after some seconds.
 metadataError=Critical error within the metadata file with a possible loss of data. Please inform the administrator.
 metadataFileNotFound=Metadata file not found \: {0}
-metadataInvalidData=invalid input
+metadataInvalidData=The input "{0}" in field {1} is invalid.
 metadataIsEmpty=contains no data
-metadataMandatoryElement=missing input for\:
-metadataMissingIdentifier=missing value for identifier
+metadataMandatoryElement=Missing input for {0}.
+metadataMediaError=A structure has media assigned which aren't declared.
+metadataMediaUnassigned=The media unit is not assigned to a structure\:
+metadataMissingIdentifier=Missing value for the identifier.
 metadataNotAllowed={0} {1} is not allowed in new element {1}.
-metadataNotEnoughElements=have to exist at least once
-metadataNotOneElement=have to exist just once, but exists
-metadataPaginationError=verification not successful, no pages assigned
-metadataPaginationPages=page without structural element\:
-metadataPaginationStructure=structural element without pages\:
+metadataNotEnoughElements={0} occurs {1} times, but has to occur at least {2} times.
+metadataNotOneElement={0} occurs {1} times, but has to occur at most {2} times.
 metadataPersonWithoutRole=person without role
 metadataReadError=XML read error at\: {0}
+metadataStructureWithoutMedia=The structue has no media assigned\:
 metadataTimeout=The metadata has not edited by you for 30 minutes and were therefore released for other users. They are currently worked on.
 multipleBatchesAssigned=This process is assigned to multiple batches. To use this feature, it must be assigned to only one batch.
 
