Add column configuration button to task list, process list and project list pages

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -162,6 +162,7 @@ close=Schlie\u00DFen
 colorScheme=Farbschema
 columnCount=Spaltenz\u00E4hlung
 comments=Kommentare
+configureColumns=Spalten konfigurieren
 configurationChanged=Einstellungen ge\u00E4ndert
 configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
@@ -697,6 +698,7 @@ signIn=Anmelden
 shouldContentBeRemoved=Soll der Inhalt wirklich gel\u00F6scht werden?
 shouldItemBeRemoved=Soll dieser Eintrag wirklich gel\u00F6scht werden?
 showProcessInTaskList=Spalte der Vorgangsdaten in eigenen Aufgaben anzeigen
+sorting=Sortierung
 surname=Nachname
 save=Speichern
 saveExit=Speichern und zur\u00FCck
