--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -162,6 +162,7 @@ close=close
 colorScheme=Color scheme
 columnCount=Column counting
 comments=Comments
+configureColumns=Configure columns
 configurationChanged=Configuration changed
 configurationFile=Configuration file
 configurationOPAC=OPAC configuration
@@ -695,6 +696,7 @@ signIn=Sign in
 shouldContentBeRemoved=Do you really want to delete the content?
 shouldItemBeRemoved=Do you really want to delete this item?
 showProcessInTaskList=Show process date column in user task list
+sorting=Sorting
 surname=Surname
 save=Save
 saveExit=Save and exit
