Add functionality to save client list column configuration to database

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -702,6 +702,7 @@ sorting=Sortierung
 surname=Nachname
 save=Speichern
 saveExit=Speichern und zur\u00FCck
+saveColumnConfiguration=Spaltenkonfiguration speichern
 search=Suche
 start=Start
 startDate=Startdatum
