--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -700,6 +700,7 @@ sorting=Sorting
 surname=Surname
 save=Save
 saveExit=Save and exit
+saveColumnConfiguration=Save column configuration
 search=Search
 start=Start
 startDate=Start date
