Add growl messages when saving column configurations

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -160,6 +160,7 @@ clientView=Mandant anzeigen
 childElement=Kindelement
 close=Schlie\u00DFen
 colorScheme=Farbschema
+columnConfigurationSaved=Spaltenkonfiguration gespeichert
 columnCount=Spaltenz\u00E4hlung
 comments=Kommentare
 configureColumns=Spalten konfigurieren
