--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -160,6 +160,7 @@ clientView=View client
 childElement=Child element
 close=close
 colorScheme=Color scheme
+columnConfigurationSaved=Column configuration saved
 columnCount=Column counting
 comments=Comments
 configureColumns=Configure columns
