Add confirm dialog when saving column configuration

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -183,6 +183,8 @@ confirmDeleteRole=Rolle l\u00F6schen?
 confirmDeleteWorkflow=Workflow l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
 confirmRelease=Abgeben best\u00E4tigen
+confirmSavingColumnConfigurationTitle=Speichern best\u00E4tigen
+confirmSavingColumnConfigurationMessagee=M\u00F6chten Sie die aktuelle Spaltenkonfiguration f\u00FCr ihren Mandanten speichern?
 copy=Kopie
 copyTemplates=Projekt inkl. Templates kopieren
 correction=Korrektur
