--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -183,6 +183,8 @@ confirmDeleteRole=Delete role?
 confirmDeleteWorkflow=Delete workflow?
 confirmNewPassword=Confirm new password
 confirmRelease=Confirm release
+confirmSavingColumnConfigurationTitle=Confirm saving
+confirmSavingColumnConfigurationMessagee=Do you want to save the current column configuration for your client?
 copy=copy
 copyTemplates=Copy Project including Templates
 correction=Correction
