--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -200,6 +200,7 @@ correctionSolutionFor=Korrekturl\u00F6sung f\u00FCr Schritt
 correctionSolveProblem=Korrekturl\u00F6sung konnte nicht an folgende Aufgabe gemeldet werden!
 couldNotCreateImageFolder=Das Verzeichnis f\u00FCr die Images konnte nicht angelegt werden
 count=Anzahl
+countDatabaseObjects=Datenbankobjekte zählen
 counting=Z\u00E4hlung
 createExcel=Exceldatei erzeugen
 createMapping=ElasticSearch Mapping erzeugen
