Change wording of metadata editor "cancel" button

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -310,6 +310,7 @@ erscheinungsjahr=Erscheinungsjahr
 erscheinungsort=Erscheinungsort
 erstellungsdatum=Erstellungsdatum
 executeKitodoScript=KitodoScript ausf\u00FChren
+exit=Beenden
 exportBatch=Gesamten Batch ins DMS exportieren
 exportDMS=Export DMS
 exportDmsTask=Vorgang exportieren
