--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -309,6 +309,7 @@ erscheinungsjahr=Year of publication
 erscheinungsort=Place of publication
 erstellungsdatum=Date created
 executeKitodoScript=Execute KitodoScript
+exit=Exit
 exportBatch=Export batch to DMS
 exportDMS=Export DMS
 exportDmsTask=Export process
