Add method to read content of metadata file to FileService

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -85,7 +85,7 @@ errorMissingClient=Der Benutzer ist keinem Mandanten zugeordnet.
 metadataDigitalDocumentError=DigitalDocument Fehler bei\: {0}
 metadataEditorThreadLock=Ein anderer Vorgang wurde im Hintergrund ge\u00F6ffnet. Bitte versuchen Sie es in einigen Sekunden erneut.
 metadataError=Es gab einen schwerwiegenden Fehler in der Metadaten-Datei. M\u00F6glicherweise gingen Daten verloren. Bitte benachrichtigen Sie Ihren Administrator damit er sich dieses Problem ansehen kann.
-metadataFileNotFound=Metadaten-Datei existiert nicht\:
+metadataFileNotFound=Metadaten-Datei existiert nicht\: {0}
 metadataInvalidData=Ung\u00FCltige Eingaben\:
 metadataIsEmpty=enth\u00E4lt keine Daten
 metadataMandatoryElement=fehlende Eingabe\:
