--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -85,7 +85,7 @@ errorMissingClient=User is not assigned to a client.
 metadataDigitalDocumentError=DigitalDocument error at\: {0}
 metadataEditorThreadLock=Another file gets processed in the background. Please try again after some seconds.
 metadataError=Critical error within the metadata file with a possible loss of data. Please inform the administrator.
-metadataFileNotFound=Metadata file not found \:
+metadataFileNotFound=Metadata file not found \: {0}
 metadataInvalidData=invalid input
 metadataIsEmpty=contains no data
 metadataMandatoryElement=missing input for\:
