Add Formclass and page for searchResult

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -673,6 +673,8 @@ searchingOpac=Durchsuche OPAC...
 searchForVolume=Vorgang suchen
 searchOPAC=OPAC durchsuchen
 searchPlaceholder=Suche nach Projekten, Vorg\u00E4ngen, Aufgaben oder Benutzern
+searchResult=Suchergebniss
+searchResultFor=Suchergebniss für:
 seitenVonUnterelementenZuweisen=Seiten von Unterelementen zuweisen
 pageAllocation=Seitenzuordnung
 pageAssign=Seiten zuweisen
