--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -671,6 +671,8 @@ searchingOpac=Searching OPAC...
 searchForVolume=Search for volume
 searchOPAC=Search OPAC
 searchPlaceholder=Search for projects, processes, tasks or users
+searchResult=Search result
+searchResultFor=Search result for:
 seitenVonUnterelementenZuweisen=Assign pages of subelements
 pageAllocation=Page allocation
 pageAssign=Assign pages
