Add actual search

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -141,6 +141,7 @@ errorSaving=Fehler beim Speichern von ''{0}''
 errorSAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 stepInWorkError=Der Schritt ist nicht mehr f\u00FCr die Bearbeitung offen, wahrscheinlich hat in der Zwischenzeit jemand diesen Schritt angenommen
 stepSaveError=Es ist ein Fehler beim Speichern des Schrittes aufgetreten.
+errorOnSearch=Fehler bei der Suche nach ''{0}''
 
 # T
 errorTransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
