--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -141,6 +141,7 @@ errorSaving=Error saving ''{0}''
 errorSAXException=Basic error while parsing the XML data. You may want to check the file for being well-formed.
 stepInWorkError=Someone is already editing this step.
 stepSaveError=Step save did not work. Error has been logged.
+errorOnSearch=Error on searching for ''{0}''
 
 # T
 errorTransformerException=An exceptional condition occurred during the transformation process to XML.
