Move message to errors_en.properties

--- a/Kitodo/src/main/resources/messages/errors_de.properties
+++ b/Kitodo/src/main/resources/messages/errors_de.properties
@@ -22,6 +22,7 @@ calendar.upload.isEmpty=Es wurde keine Datei \u00FCbertragen.
 calendar.upload.missingMandatoryElement=Ein erforderliches XML-Element konnte nicht gefunden werden.
 calendar.upload.missingMandatoryValue=Ein erforderlicher Wert konnte nicht gefunden werden.
 calendar.upload.overlappingDateRanges=Der Erscheinungsverlauf konnte nicht importiert werden, da sich Datumsbereiche von Bl\u00F6cken \u00FCberlappen\:
+cannotDeterminePosition=Die Position für das korrekte Platzieren von {0} kann nicht bestimmt werden, da das Sortierkriterium eines seiner Geschwister "{1}" ist, jedoch numerisch sein muss.
 cannotGetDigitalDocument=Kann DigitalDocument nicht bekommen
 createNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann nicht angelegt werden, da einem Strukturyp ein Metadatum nicht zugewiesen werden kann
 errorChangeTaskStatus=Fehler beim Ändern des Aufgabenstatus ''{0}'' für den Prozess mit der ID {1}.
