--- a/Kitodo/src/main/resources/messages/errors_en.properties
+++ b/Kitodo/src/main/resources/messages/errors_en.properties
@@ -22,6 +22,7 @@ calendar.upload.isEmpty=No file was transferred.
 calendar.upload.missingMandatoryElement=A mandatory XML element could not be found.
 calendar.upload.missingMandatoryValue=A mandatory value could not be found.
 calendar.upload.overlappingDateRanges=Due to overlapping date ranges of blocks, the course of appearance could not be imported\:
+cannotDeterminePosition=Cannot determine position to place {0} correctly because the sorting criterion of one of its siblings is "{1}", but must be numeric.
 cannotGetDigitalDocument=Can not get DigitalDocument
 createNewspaperProcessesTask.MetadataNotAllowedException=The process {0} cannot be created because a metadata element cannot be assigned to a structural type
 errorChangeTaskStatus=Error change task status ''{0}'' for process with ID {1}.
