Add messages for workflow statuses

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -27,7 +27,7 @@ active=Aktiv
 activeUsers=Aktive Benutzer
 addDemoTask=Beispielaufgabe hinzuf\u00FCgen
 addFilter=Filter hinzuf\u00FCgen
-addMessage=Nachricht hinzuf\u00FCgen
+addMessage=Nachricht hinzuf\u00FCgens
 addMessageForAll=Nachricht zu allen Prozessen hinzuf\u00FCgen
 addNewMetadataGroup=Neue Metadatengruppe hinzuf\u00FCgen
 addProjects=Projekte hinzuf\u00FCgen
