Add messages for workflow statuses

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -41,7 +41,6 @@ adjustSettingText=Ihr Administrator kann diese Einstellung unter System => Recht
 administration=Administration
 # administrativ is supposedly use for translation of TaskEditType
 administrativ=administrativ
-editType=Art der Aktualisierung
 allPages=Alle Seiten
 allMyTasks=alle meine Aufgaben
 allProcesses=Alle Vorg\u00E4nge
@@ -55,6 +54,7 @@ apply=\u00DCbernehmen
 applyToAllProcesses=\u00DCbernehmen f\u00FCr alle Vorg\u00E4nge dieses Batches
 applyToThisProcess=\u00DCbernehmen f\u00FCr diesen Vorgang
 arabic=arabisch
+archived=Archiviert
 assigned=Zugewiesen
 ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
@@ -220,7 +220,6 @@ createdInUserHomeAll=Verzeichnisse in Benutzerhome angelegt
 currentFolder=Aktueller Ordner
 currentRepresentative=Aktueller Repr\u00E4sentant\:
 dataCopier.runtimeException=Fehler beim Kopieren der Daten\:
-file=Datei
 dashboard=Dashboard
 dataPrivacy=Datenschutz
 # used in "LegalTexts.java"
@@ -268,6 +267,7 @@ docstructTypeAendern=Typ des Strukturelements \u00E4ndern
 docstructs=Strukturelemente
 down=unter
 download=Images herunterladen
+draft=Entwurf
 duplicate=Duplizieren
 duplicateLdapGroup=LDAP Gruppe duplizieren
 duplicateProject=Projekt duplizieren
@@ -299,6 +299,7 @@ editFolderDialog.path=Ordner
 editFolderDialog.urlStructure=METS-Pfad
 editMetadataGroup=Metadatengruppe bearbeiten
 editTemplate=Produktionsvorlage bearbeiten
+editType=Art der Aktualisierung
 editWorkflow=Workflow bearbeiten
 editor=Editor
 createProcessFromTemplate=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
@@ -324,6 +325,7 @@ exportRus=Export Rus
 exportSerialBatchTask=Fortlaufendes Sammelwerk ins DMS exportieren
 extendedSearch=Erweiterte Suche
 field=Feld
+file=Datei
 fileDownload=Datei herunterladen
 newFileName=Neuer Dateiname
 fileManipulation=Austausch von Dateien
