--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -41,7 +41,6 @@ adjustSettingText=Your administrator can adjust the corresponding settings under
 administration=Administration
 # administrativ is supposedly use for translation of TaskEditType
 administrativ=administrative
-editType=Update type
 allPages=All pages
 allMyTasks=All my tasks
 allProcesses=All processes
@@ -55,6 +54,7 @@ apply=Apply
 applyToAllProcesses=Apply to all processes of the batch
 applyToThisProcess=Apply to this process
 arabic=Arabic
+archived=Archiviert
 assigned=Assigned
 ats=ATS
 ausGruppeLoeschen=Delete user from group
@@ -220,7 +220,6 @@ createdInUserHomeAll=Folders created in user directory
 currentFolder=Current folder
 currentRepresentative=Current representative\:
 dataCopier.runtimeException=Copying the data failed\:
-file=File
 dashboard=Dashboard
 dataPrivacy=Data privacy
 # used in "LegalTexts.java"
@@ -267,6 +266,7 @@ docstructTypeAendern=Change docstruct type
 docstructs=Docstructs
 down=down
 download=Download images
+draft=Draft
 duplicate=duplicate
 duplicateLdapGroup=Duplicate LDAP group
 duplicateProject=Duplicate project
@@ -298,6 +298,7 @@ editFolderDialog.path=Folder
 editFolderDialog.urlStructure=METS path
 editMetadataGroup=Edit metadata group
 editTemplate=Edit template
+editType=Update type
 editWorkflow=Edit workflow
 editor=Editor
 createProcessFromTemplate=Create process from this process template
@@ -323,6 +324,7 @@ exportRus=Export Rus
 exportSerialBatchTask=Export serial publication into DMS
 extendedSearch=Extended Search
 field=Field
+file=File
 fileDownload=Download file
 fileManipulation=Exchange of files
 fileUpload=Upload files
