Add buton for archivining active workflows

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -54,6 +54,7 @@ apply=\u00DCbernehmen
 applyToAllProcesses=\u00DCbernehmen f\u00FCr alle Vorg\u00E4nge dieses Batches
 applyToThisProcess=\u00DCbernehmen f\u00FCr diesen Vorgang
 arabic=arabisch
+archive=Archivieren
 archived=Archiviert
 assigned=Zugewiesen
 ats=ATS
@@ -169,6 +170,7 @@ configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
 confirm=Diese Aktion kann einige Zeit dauern. Sind Sie sicher, dass Sie fortfahren m\u00F6chten?
+confirmArchive=Archivieren best\u00E4tigen
 confirmClose=Schlie\u00DFen best\u00E4tigen
 confirmDelete=L\u00F6schen best\u00E4tigen
 confirmDeleteClient=Mandant l\u00F6schen?
