--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -54,7 +54,8 @@ apply=Apply
 applyToAllProcesses=Apply to all processes of the batch
 applyToThisProcess=Apply to this process
 arabic=Arabic
-archived=Archiviert
+archive=Archive
+archived=Archived
 assigned=Assigned
 ats=ATS
 ausGruppeLoeschen=Delete user from group
@@ -169,6 +170,7 @@ configurationFile=Configuration file
 configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
 confirm=This operation may take some time. Are you sure you want to continue?
+confirmArchive=Confirm archive
 confirmClose=Confirm close
 confirmDelete=Confirm delete
 confirmDeleteClient=Delete client?
